# go125_parser

./: .gitignore  Cargo.toml  README.md  bench_results.txt  justfile  lalrpop_doc.txt  output.txt  output_cleaned.txt  statements.txt  test_lexer.rs
benches/: parser_benchmark.rs
crates/ast_derive/: Cargo.toml
crates/ast_derive/src/: lib.rs
crates/parser/: Cargo.toml  build.rs  clean_lalrpop_log.py  compact_lalrpop_v4.py
crates/parser/docs/: python_code_tips.md  solidity_code_tips.md
crates/parser/src/: ast.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs  parser copy.lalrpop1  parser.lalrpop  parser.rs  parser_support.rs  walk.rs
crates/parser/tests/: lexer_comments_cr.rs  lexer_errors_corpus.rs  lexer_golden.rs  lexer_numbers.rs  lexer_numbers_go_scanner.rs  lexer_props.proptest-regressions  lexer_props.rs  lexer_scan_table.rs  lexer_semis.rs  lexer_strings.rs  lexer_unicode.rs  lexer_whitespace.rs
docs/: gluon_code_tips.md  lalrpop_code_tips.md  lalrpop_documentation.md
examples/: parse.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lexer.rs
src/: ast.rs  ast2.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs
tests/: go_corpus.rs  parse_snippets.rs
